--- a/DongGia-master/src/components/_footer/index.pug
+++ b/DongGia-master/src/components/_footer/index.pug
@@ -2,59 +2,58 @@ footer
 	.container
 		.row.no-gutters.top
 			.col-lg-4.col-sm-6.address
-				h2.module-title Contact Info
-				p 54 Nguyen Cu, Thao Dien Ward, District 2, Ho Chi Minh city, Vietnam
-				br
-				p Hotline: 
-					a(href="tel:+84965117114") 0965 117 114
-				p Open: 9.00am - 6.00pm (Monday - Friday)
-				p 
-					a(href="mailto:info@dong-gia.com") info@dong-gia.com
+				h2.module-title CÔNG TY TNHH hoàng phú thái
+				i.fas.fa-map-marker-alt
+					p BT 06-08 , Đường 28B KĐT Phước Long, P. Phước Long, Tp. Nha Trang, Khánh Hòa.
+				i.fas.fa-phone
+					p
+						a(href="tel:+84918290028") 0918290028
+				i.fas.fa-envelope
+					p
+						a(href="mailto:info@hoangphuthai.vn") info@hoangphuthai.vn
+				i.fas.fa-globe-asia
+					p 
+						a(href="www.hoangphuthai.vn") www.hoangphuthai.vn
 			.col-lg.col-sm-6.nav
-				h2.module-title Customer Service
+				h2.module-title.blank
 				nav
-					a(href="#") Care Info
-					a(href="#") Shopping Guide
-					a(href="#") Terms & Conditions
-					a(href="#") Privacy Policy
-					a(href="#") FAQ
-					a(href="#") Contact
+					a(href="#") giới thiệu
+					a(href="#") năng lực thi công
+					a(href="#") tuyển dụng
+					a(href="#") sitemap
 			.col-lg.col-sm-6.nav
-				h2.module-title Contact
+				h2.module-title liên kết nhanh
 				nav
-					a(href="#") Head Office & Showroom
-					a(href="#") Retail shop & Warehouse
-					a(href="#") Hanoi Store 
-					a(href="#") Local Delivery
-					a(href="#") Worldwide Delivery
+					a(href="#") Dự án
+					a(href="#") thư viện
+					a(href="#") tin tức - sự kiện
+					a(href="#") Hỗ trợ khách hàng
+					a(href="#") liên hệ
 			.col-lg-3.col-sm-6
 				.receive-news
 					.Module
 						.subscribe
+							h2.module-title ĐĂNG KÝ NHẬN BẢN TIN
 							div
-								.subscribefrm
-									input.subscribeemail(type='text', placeholder='Địa chỉ email')
-									button.subscribebutton | Đăng ký
-									span.fa.fa-exclamation-triangle(style='display:none;') Vui lòng nhập email.
-									span.fa.fa-exclamation-triangle(style='display:none;') Email không hợp lệ.
-					.Module
-						.ModuleContent
-							p Subscribe to receive updates, access to exclusive deals, and more.
-				.social
-					.Module
-						.ModuleContent
-							nav
-								a(href="#")
-									span.fab.fa-facebook-f
-								a(href="#")
-									span.fab.fa-instagram
-								a(href="#")
-									span.fab.fa-youtube
+								.subscribenew
+									input.subscribeinfo(type='text', placeholder='Nhập họ tên của bạn')
+									input.subscribeinfo(type='text', placeholder='Nhập email của bạn')
+									input.subscribeinfo(type='text', placeholder='Nhập số điện thoại của bạn')
+									button.subscribebutton Đăng ký
 		.row.copyright
 			.col
 				p 
-					span @ 2019 DONG GIA ENTERPRISE - CERAMICS & DÉCO OBJECTS.
-					span ALL RIGHT RESERVED. DESIGN BY 
-						a(href="https://canhcam.vn") CÁNH CAM.
-		#gotop
-			img(src="./img/gotop.png", alt="")
+					span © 2018 CÔNG TY TNHH Hoàng phú thái. All Rights Reserved.
+				.Module
+					.ModuleContent
+						nav
+							ul
+								li
+									a(href="#")
+										i.fab.fa-facebook-f
+								li
+									a(href="#")
+										i.fab.fa-youtube
+								li
+									a(href="#")
+										i.fab.fa-instagram
