--- a/DongGia-master/src/components/_footer/index.sass
+++ b/DongGia-master/src/components/_footer/index.sass
@@ -1,5 +1,6 @@
 footer
-	background: darken(white,8%)
+	background: url('../img/about/footer_bg.png') center center no-repeat
+	background-size: cover
 	.container
 		position: relative
 	.top
@@ -7,21 +8,64 @@ footer
 		padding-bottom: 48px
 		border-bottom: 1px solid #d8d8d9
 	.module-title
-		font-size: 18px
-		font-weight: 700
-		color: lighten(black,33%)
-		margin-bottom: 16px
-	p, a
-		font-size: 15px
-		font-weight: 400
+		font-size: 14px
+		font-family: "Montserrat"
+		color: rgb(242, 242, 242)
+		font-weight: bold
 		text-transform: uppercase
-		color: #8b8c92
+		line-height: 1.714
+		margin-bottom: 16px
+	.blank
+		&:before
+			content: ""
+			display: inline-block
+	i
+		display: flex
+		align-items: center
+		color: #bbbbbb
+	.fa-map-marker-alt
+		&:before
+			content: "\f3c5"
+			font-family: 'Font Awesome 5 Free'
+			font-weight: 600
+	.fa-phone
+		&:before
+			content: "\f095"
+			font-family: 'Font Awesome 5 Free'
+			font-weight: 600
+	.fa-envelope
+		&:before
+			content: "\f0e0"
+			font-family: 'Font Awesome 5 Free'
+			font-weight: 600
+	.fa-globe-asia
+		&:before
+			content: "\f57e"
+			font-family: 'Font Awesome 5 Free'
+			font-weight: 600
+	p
+		padding: .5rem 0 .5rem 1rem
+	p, a
+		color: #bbbbbb
+		font-family: Montserrat
+		font-size: 14px
+		font-weight: 400
+		line-height: 28px
+		font-style: initial
+		text-align: left
 	a:hover
-		color: map-get($mau, main)
+		color: #f5b535
+		text-decoration: none
 	.nav
 		nav
 			display: flex
 			flex-direction: column
+			color: #bbbbbb
+			font-family: Roboto
+			font-size: 14px
+			font-weight: 300
+			line-height: 32px
+			text-transform: uppercase
 	.no-gutters
 		.address
 			padding-right: 20px
@@ -30,57 +74,62 @@ footer
 			text-transform: none
 			color: lighten(black,33%)
 			font-weight: 500
-		.subscribefrm
+		.subscribenew
 			position: relative
 			z-index: 0
-			.subscribeemail
+			.subscribeinfo
 				border: 0
 				border-bottom: 1px solid #8b8c92
 				background: transparent
 				width: 100%
 				height: 35px
-				margin-bottom: 8px
+				margin-bottom: 14px
+				background-color: #ffffff
+				opacity: 0.1
+				font-family: Montserrat
+				line-height: 32px
 				&:focus
 					outline: none
 			.subscribebutton
-				z-index: 0
-				font-size: 0
-				display: flex
-				justify-content: center
-				align-items: center
-				border: 0
-				background: transparent
-				position: absolute
-				right: 0
-				top: 0
-				padding: 0
-				width: 35px
-				height: 35px
-				&:before
-					content: '\e87a'
-					font-size: 20px
-					font-family: 'Linearicons-free'
-	.social
-		margin-top: 24px
-		a
-			display: inline-flex
-			justify-content: center
-			align-items: center
-			width: 60px
-			height: 30px
-			color: #8b8c92
-			border: 1px solid #8b8c92
-			&:hover
-				background: map-get($mau, main)
-				border-color: map-get($mau, main)
-				color: white
-			+ a
-				margin-left: 8px
+				width: 100%
+				background-color: #ac8a42
+				background-image: linear-gradient(to right, #9d763d 0%, #d3ae63 100%)
+				border: none
+				outline: none
+				height: 32px
+				color: #f6f3e9
+				font-family: Montserrat
+				font-size: 16px
+				font-weight: 500
+				line-height: 32px
+				text-transform: uppercase
 	.copyright
 		justify-content: center
 		padding-top: 20px
 		padding-bottom: 20px
 		text-align: center
+		p
+			float: left
+		.Module
+			nav
+				ul
+					display: flex
+					padding: .5rem 0
+					height: 44px
+					justify-content: flex-end
+					align-items: center
+					li
+						border-radius: 100%
+						line-height: 30px
+						height: 25px
+						width: 25px
+						display: flex
+						justify-content: center
+						align-items: center
+						background: #404040
+						margin-left: .5rem
+						a
+							text-decoration: none
 	@media (max-width: 991.9px)
 		.copyright
 			p,a
