--- a/DongGia-master/src/components/_header/index.sass
+++ b/DongGia-master/src/components/_header/index.sass
@@ -6,7 +6,7 @@ header
 	top: 0
 	left: 0
 	transition: all .3s ease-out
-	background: white
+	background-color: #404040
 	z-index: 2
 	&.fixed
 		box-shadow: 0 0 8px rgba(0,0,0,.15)
@@ -39,12 +39,26 @@ header
 		>a
 			display: flex
 			align-items: center
+			justify-content: center
 			text-decoration: none
 			padding: 0 8px
-			.mdi
-				font-size: 18px
+			background-image: linear-gradient(0deg,#f5b535 40%,#e4c06a)
+			border-radius: 3px
+			width: 184px
+			height: 30px
+			span
+				display: inline-block
+				color: #ffffff !important
+				font-family: Montserrat
+				font-size: 16px
 				font-weight: 700
-				color: map-get($mau, main)
+			.mdi
+				display: inline-block
+				color: #ffffff
+				font-family: "Material Icons"
+				font-size: 18px
+				font-weight: 400
+				letter-spacing: -0.18px
 			&.login,&.hotline,&.welcome,&.logout
 				.mdi
 					margin-right: 7px
@@ -70,14 +84,17 @@ header
 						color: map-get($mau, hover)
 		.language
 			position: relative
+			margin-left: 10px
 			.current
-				width: 80px
-				height: 36px
-				background: darken(white,4%)
+				width: 30px
+				height: 30px
+				border-radius: 3px
+				background-color: #333333
 				display: flex
 				justify-content: center
 				align-items: center
 				cursor: pointer
+
 				.mdi-web
 					margin-right: 6px
 					font-size: 18px
@@ -116,14 +133,17 @@ header
 		justify-content: center
 		align-items: center
 		cursor: pointer
-		margin-left: 8px
+		margin-left: 10px
 		.search-toggle
+			border-radius: 3px
+			background-color: #333333
+			height: 30px !important
+			width: 30px
 			font-size: 18px
-			width: inherit
-			height: inherit
 			display: flex
 			justify-content: center
 			align-items: center
+			
 		.searchbox
 			display: none
 			position: absolute
@@ -172,6 +192,7 @@ header
 	.category-list
 		flex-grow: 1
 		flex-basis: 0
+		margin-top: .8rem
 		.ModuleContent
 			ul
 				display: flex
@@ -182,32 +203,17 @@ header
 				li
 					flex-grow: auto
 					a
-						color: lighten(black,33%)
-						white-space: nowrap
-	.cart
-		margin-left: 16px
-		.cart-toggle
-			width: 140px
-			height: 45px
-			display: flex
-			border: 1px solid lighten(black,33%)
-			border-radius: 4px
-			cursor: pointer
-			.icon
-				background: lighten(black,33%)
-				width: 45px
-				display: flex
-				justify-content: center
-				align-items: center
-				color: white
-			.text
-				flex-grow: 1
-				flex-basis: 0
-				display: flex
-				justify-content: center
-				align-items: center
-		.cartpanel
-			display: none
+						color: #e1e1e1
+						font-family: "Montserrat - Medium"
+						letter-spacing: -0.28px
+						font-size: 14px
+						font-weight: 500
+						line-height: 20px
+						text-transform: uppercase
+						text-decoration: none
+					&:hover
+						a
+							color: #f5b535
 	.toggle-menu
 		display: none
 		cursor: pointer
@@ -227,7 +233,7 @@ header
 			display: none
 			z-index: 1
 			position: fixed
-			top: 73px
+			top: 90px
 			left: 0
 			width: 100%
 			height: 100%
@@ -240,7 +246,7 @@ header
 			justify-content: center
 			align-items: center
 			font-size: 28px
-			color: map-get($mau, main)
+			color: #f5b535
 			line-height: 35px
 		.row.no-gutters
 			align-items: center
@@ -249,16 +255,6 @@ header
 			.searchbox
 				z-index: 2
 				background: white
-		.cart
-			margin-left: 12px
-			.cart-toggle
-				width: auto
-				border: 0
-				width: 35px
-				height: 35px
-				overflow: hidden
-				.text
-					display: none
 		.logo
 			max-width: 120px
 			margin-right: 15px
@@ -266,7 +262,7 @@ header
 			margin-bottom: 0
 			justify-content: flex-start
 			position: fixed
-			top: 73px
+			top: 90px
 			height: 550px
 			right: 0
 			z-index: 3
@@ -305,7 +301,7 @@ header
 					top: 65px
 		.category-list
 			position: fixed
-			top: 73px
+			top: 77px
 			z-index: 2
 			right: 0
 			width: 100%
