Done page about

--- a/DongGia-master/src/components/_core/index.sass
+++ b/DongGia-master/src/components/_core/index.sass
@@ -11,6 +11,139 @@ html
 	background-color: #fff
 body
 	margin: 0
+	//about
+	.about
+		.col
+			padding: 0
+		h2
+			text-align: center
+			padding-bottom: 1rem
+			font-family: 'Montserrat', sans-serif
+			font-size: 38px
+			font-weight: bold
+			line-height: 38px
+			letter-spacing: 0.95px
+			background-clip: text
+			-webkit-background-clip: text
+			color: transparent
+			background-image: linear-gradient(to right, #9d763d 0%, #d3ae63 100%)
+		.module-about
+			.module-title
+				display: flex
+				justify-content: center
+				align-items: center
+			.content
+				.moduleContent
+					padding: 1rem
+					p
+						color: #666666
+						font-family: 'Montserrat', sans-serif
+						font-size: 18px
+						font-weight: 400
+						line-height: 28px
+				padding: 0
+				.readmore
+					padding: 1rem
+					justify-content: center
+					display: flex
+					button
+						width: 185px
+						border-radius: 5px
+						border: 1px solid rgb(163, 126, 44)
+						height: 42px
+						background: #fff
+						color: #685c53
+						font-family: 'Montserrat', sans-serif
+						font-size: 14px
+						font-weight: 400
+						line-height: 20px
+						text-transform: uppercase
+				.module_img
+					text-align: center
+					position: relative
+		.module-seek
+			background: url('../img/about/about_banner_bg.png') center center no-repeat
+			background-size: cover
+			text-align: center
+			padding: 1rem
+			h2
+				padding-bottom: 3rem
+				padding-top: 2rem
+				letter-spacing: 0.8px
+				text-shadow: 2px 4px 10px rgba(49, 38, 14, 0.5)
+				color: #ffffff
+				font-family: 'Montserrat', sans-serif
+				font-size: 30px
+				font-weight: 600
+				line-height: 31px
+			.content
+				border-radius: 5px
+				background: rgba(255,255,255,.7)
+				margin: 1rem 0
+				padding: 0
+				p
+					padding: .5rem
+					color: #666666
+					font-family: 'Montserrat', sans-serif
+					font-size: 15px
+					font-weight: 400
+					line-height: 23px
+				h3
+					position: relative
+					padding: .5rem 0
+					color: #685c53
+					font-family: 'Montserrat', sans-serif
+					font-size: 24px
+					font-weight: 600
+					line-height: 31px
+					letter-spacing: 0.6px
+					&:before
+						content: ""
+						display: inline-block
+						height: 1px
+						width: 100%
+						background-image: linear-gradient(to top, #9d763d 0%, #d3ae63 100%)
+						position: absolute
+						bottom: 0
+						left: 0
+				h4
+					padding: 0 .5rem 1rem
+					font-family: 'Montserrat', sans-serif
+					font-size: 24px
+					font-weight: 600
+					line-height: 31px
+					letter-spacing: 0.6px
+					text-transform: uppercase
+					background-clip: text
+					-webkit-background-clip: text
+					color: transparent
+					background-image: linear-gradient(to right, #9d763d 0%, #d3ae63 100%)
+		.module-history
+			text-align: center
+			h2
+				padding-top: 3rem
+				padding-bottom: 2rem
+			p
+				color: #666666
+				font-family: 'Montserrat', sans-serif
+				font-size: 16px
+				font-weight: 400
+				line-height: 28px
+				letter-spacing: 0.4px
+				padding: 1rem
+		.module-partner
+			.moduleContent
+				.carousel
+					text-align: center
+					.box-img
+						&:hover
+							box-shadow: 0 4px 20px rgba(19, 28, 35, 0.1)
+						&:before
+							content: ""
+							width: 100%
+							height: 100%
+							display: inline-block
+
 ul
 	list-style-type: none
 	padding-left: 0
