--- a/DongGia-master/src/components/_footer/index.sass
+++ b/DongGia-master/src/components/_footer/index.sass
@@ -103,6 +103,17 @@ footer
 				font-weight: 500
 				line-height: 32px
 				text-transform: uppercase
+				position: relative
+				&:before
+					content: '\e87a'
+					font-size: 20px
+					font-family: 'Linearicons-free'
+					position: absolute
+					display: inline-block
+					font-family: Linearicons-free
+					font-size: 20px
+					content: "\e87a"
+					right: 5%
 	.copyright
 		justify-content: center
 		padding-top: 20px
