--- a/DongGia-master/src/pages/_layout.pug
+++ b/DongGia-master/src/pages/_layout.pug
@@ -7,6 +7,7 @@ html(lang="en")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 		meta(http-equiv="X-UA-Compatible", content="ie=edge")
 		link(href='https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700&subset=vietnamese', rel='stylesheet')
+		link(href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,600,600i,700,700i" rel="stylesheet")
 		link(rel="stylesheet", href="./css/global.min.css")
 		link(rel="stylesheet", href="./css/main.min.css")
 		title #{title}
@@ -14,6 +15,7 @@ html(lang="en")
 	body(class=bodyClass)
 		block header
 			include ../components/_header/index.pug
+			include ../components/_header_banner/index.pug
 		main
 			include ../components/banner/index.pug
 			block main
