--- a/DongGia-master/src/components/_core/index.sass
+++ b/DongGia-master/src/components/_core/index.sass
@@ -132,8 +132,13 @@ body
 				letter-spacing: 0.4px
 				padding: 1rem
 		.module-partner
+			padding: 4rem
 			.moduleContent
+				display: flex
+				margin: 0 5rem
+				padding: 0 1rem
 				.carousel
+					box-shadow: 0px 0px 1px rgba(19, 28, 35, 0.1)
 					text-align: center
 					.box-img
 						&:hover
