--- a/DongGia-master/src/pages/about.pug
+++ b/DongGia-master/src/pages/about.pug
@@ -53,7 +53,7 @@ block main
 						p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. 
 		.module-partner
 			h2.module-title Đối tác - Khách hàng
-			.moduleContent
+			.moduleContent.owl-carousel.owl-theme
 				- for (x=1;x<6;x++)
 					.carousel
 						.container
