Done footer and header. fixed.

--- a/DongGia-master/src/components/_footer/index.pug
+++ b/DongGia-master/src/components/_footer/index.pug
@@ -36,9 +36,9 @@ footer
 							h2.module-title ĐĂNG KÝ NHẬN BẢN TIN
 							div
 								.subscribenew
-									input.subscribeinfo(type='text', placeholder='Nhập họ tên của bạn')
-									input.subscribeinfo(type='text', placeholder='Nhập email của bạn')
-									input.subscribeinfo(type='text', placeholder='Nhập số điện thoại của bạn')
+									input.subscribeinfo(type='text' spellcheck="false", placeholder='Nhập họ tên của bạn')
+									input.subscribeinfo(type='text' spellcheck="false", placeholder='Nhập email của bạn')
+									input.subscribeinfo(type='text' spellcheck="false", placeholder='Nhập số điện thoại của bạn')
 									button.subscribebutton Đăng ký
 		.row.copyright
 			.col
