--- a/DongGia-master/src/components/_header/index.pug
+++ b/DongGia-master/src/components/_header/index.pug
@@ -32,17 +32,17 @@ header
 								li
 									a(href="product.html") năng lực thi công
 								li
-									a(href="collection.html") dự án
+									a(href="project.html") dự án
 								li
-									a(href="#") tin tức - sự kiện
+									a(href="news-envents.html") tin tức - sự kiện
 								li
 									a(href="catalogue.html") hỗ trợ khách hàng
 								li
-									a(href="gallery.html") tuyển dụng
+									a(href="employ.html") tuyển dụng
 								li
 									a(href="gallery.html") thư viện
 								li
-									a(href="gallery.html") liên hệ
+									a(href="contact.html") liên hệ
 			.toggle-menu
 				span.mdi.mdi-menu
 	.backdrop
