--- a/DongGia-master/src/pages/about.pug
+++ b/DongGia-master/src/pages/about.pug
@@ -7,10 +7,9 @@ block var
 
 block main
 	section.about
-		h2.module-title Giới thiệu
+		h2.moduleTitle Giới thiệu
 		.module-about
 			.content
-				
 				.moduleContent
 					p Hành trình 7 năm xây dựng những giá trị sống đích thực:
 					p Công ty TNHH Hoàng Phú Thái thành lập vào năm 2011, không ngừng phát triển trong lĩnh vực đầu tư và xây dựng bất động sản trong nước. Với sứ mệnh phủ sóng các công trình trên cả nước và vươn mình tới các công trình ngoài nước, Hoàng Phú Thái luôn nghiên cứu và áp dụng công nghệ tiên tiến trên thế giới. 
@@ -42,7 +41,7 @@ block main
 							img.img-fluid(src="../img/about/about_icon_3.png", alt="", srcset="")
 							h4 CHÍNH TRỰC - HIỆU QUẢ - CHUYÊN NGHIỆP
 		.module-history
-			h2.module-title Lịch sử phát triển
+			h2.moduleTitle Lịch sử phát triển
 			.container
 				.row
 					.col.content
@@ -51,7 +50,7 @@ block main
 						p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit
 						p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. 
 		.module-partner
-			h2.module-title Đối tác - Khách hàng
+			h2.moduleTitle Đối tác - Khách hàng
 			.moduleContent.owl-carousel.owl-theme
 				- for (x=1;x<6;x++)
 					.carousel
