--- a/DongGia-master/src/pages/project.pug
+++ b/DongGia-master/src/pages/project.pug
@@ -1,13 +1,13 @@
 extends _layout.pug
 
 block var
-	- var title = "Home"
-	- var name = "index"
-	- var bodyClass = "index-page"
+	- var title = "Project"
+	- var name = "project"
+	- var bodyClass = "project-page"
 
 block main
 	section.project
-		h2.module-title DỰ ÁN
+		h2.moduleTitle DỰ ÁN
 		.container
 			.row
 				.col
