--- a/DongGia-master/src/components/_core/index.sass
+++ b/DongGia-master/src/components/_core/index.sass
@@ -249,7 +249,7 @@ body
 					p
 						padding: 0
 		.module-partner
-			padding: 4rem
+			padding: 4rem 0
 			.moduleContent
 				display: flex
 				margin: 0 5rem
@@ -257,14 +257,8 @@ body
 				.carousel
 					box-shadow: 0px 0px 1px rgba(19, 28, 35, 0.1)
 					text-align: center
-					.box-img
-						&:hover
-							box-shadow: 0 4px 20px rgba(19, 28, 35, 0.1)
-						&:before
-							content: ""
-							width: 100%
-							height: 100%
-							display: inline-block
+					&:hover
+						box-shadow: 0 4px 20px rgba(19, 28, 35, 0.1)
 
 	.product
 		padding-bottom: 5rem
