--- a/DongGia-master/src/components/_footer/index.sass
+++ b/DongGia-master/src/components/_footer/index.sass
@@ -9,9 +9,9 @@ footer
 		border-bottom: 1px solid #d8d8d9
 	.module-title
 		font-size: 14px
-		font-family: "Montserrat"
+		font-family: 'Montserrat', sans-serif
 		color: rgb(242, 242, 242)
-		font-weight: bold
+		font-weight: 600
 		text-transform: uppercase
 		line-height: 1.714
 		margin-bottom: 16px
@@ -25,29 +25,39 @@ footer
 		color: #bbbbbb
 	.fa-map-marker-alt
 		&:before
+			padding-left: 2px
+			padding-right: 2px
 			content: "\f3c5"
 			font-family: 'Font Awesome 5 Free'
 			font-weight: 600
+			width: 16px
+			height: 16px
 	.fa-phone
 		&:before
 			content: "\f095"
 			font-family: 'Font Awesome 5 Free'
 			font-weight: 600
+			width: 16px
+			height: 16px
 	.fa-envelope
 		&:before
 			content: "\f0e0"
 			font-family: 'Font Awesome 5 Free'
 			font-weight: 600
+			width: 16px
+			height: 16px
 	.fa-globe-asia
 		&:before
 			content: "\f57e"
 			font-family: 'Font Awesome 5 Free'
 			font-weight: 600
+			width: 16px
+			height: 16px
 	p
 		padding: .5rem 0 .5rem 1rem
 	p, a
 		color: #bbbbbb
-		font-family: Montserrat
+		font-family: 'Montserrat', sans-serif
 		font-size: 14px
 		font-weight: 400
 		line-height: 28px
@@ -79,17 +89,21 @@ footer
 			z-index: 0
 			.subscribeinfo
 				border: 0
-				border-bottom: 1px solid #8b8c92
-				background: transparent
 				width: 100%
 				height: 35px
 				margin-bottom: 14px
-				background-color: #ffffff
-				opacity: 0.1
-				font-family: Montserrat
+				background-color: rgba(255, 255, 255, 0.102)
+				font-family: 'Montserrat', sans-serif
 				line-height: 32px
+				padding-left: 1rem
+				color: #ffffff
 				&:focus
 					outline: none
+				&::placeholder
+					font-size: 12px
+					font-family: 'Montserrat', sans-serif
+					color: rgb(204, 204, 204)
+					line-height: 2.667
 			.subscribebutton
 				width: 100%
 				background-color: #ac8a42
