--- a/DongGia-master/src/components/_header/index.sass
+++ b/DongGia-master/src/components/_header/index.sass
@@ -101,13 +101,13 @@ header
 				.mdi-chevron-down
 					margin-left: 6px
 				&.active
-					background: map-get($mau, main)
+					background: #f5b535
 					span
 						color: white
 			.dropdown
 				position: absolute
 				top: 100%
-				left: 0
+				left: -50px
 				width: 80px
 				background: darken(white,4%)
 				display: none
@@ -120,7 +120,7 @@ header
 					width: 100%
 					padding: 7px 0
 					&:hover
-						background: map-get($mau, main)
+						background: #f5b535
 						color: white
 						text-decoration: none
 				&.active
@@ -194,6 +194,7 @@ header
 		flex-basis: 0
 		margin-top: .8rem
 		.ModuleContent
+			background: #404040
 			ul
 				display: flex
 				font-size: 15px
@@ -267,14 +268,25 @@ header
 			right: 0
 			z-index: 3
 			flex-direction: column
-			width: 105px
-			background: #00973E
+			width: 55px
+			background-color: rgba(255, 255, 255, 0.102)
 			transform: translateX(100%)
 			transition: all .3s ease-out
 			&.active
 				transform: translateX(0)
+				>a
+					height: 55px
+					span:not(.mdi)
+						display: none
+			.search
+				height: 45px
+				width: 100%
+				margin: 0
+				.search-toggle
+					width: 100%
+					height: 100% !important
 			>a
-				height: 90px
+				height: 55px
 				width: 100%
 				padding: 8px
 				border-bottom: 1px solid white
@@ -285,6 +297,8 @@ header
 				span:not(.mdi), &.hotline span:not(.mdi)
 					color: white
 					width: 100%
+				span:not(.mdi)
+					display: none
 				&.hotline, &.login
 					.mdi
 						margin-right: 0
@@ -294,11 +308,26 @@ header
 						font-weight: 400
 			.language
 				width: 100%
-				height: 90px
-				padding: 27px 12px
+				height: 45px
+				padding: 0
+				margin: 0
+				.current
+					width: 100%
+					height: 100%
+					&.active
+						background: #f5b535
 				.dropdown
-					left: 11.5px
-					top: 65px
+					left: 0
+					top: 45px
+					width: 100%
+					a
+						height: 35px
+						width: 100%
+						display: flex
+						justify-content: center
+						align-items: center
+						&:hover
+							background-color: #f5b535
 		.category-list
 			position: fixed
 			top: 77px
