fix copyright - footer

--- a/DongGia-master/src/components/_footer/index.sass
+++ b/DongGia-master/src/components/_footer/index.sass
@@ -130,11 +130,12 @@ footer
 					right: 5%
 	.copyright
 		justify-content: center
-		padding-top: 20px
-		padding-bottom: 20px
+		padding-top: 10px
+		padding-bottom: 145px
 		text-align: center
 		p
 			float: left
+			padding-left: 0
 		.Module
 			nav
 				ul
