Done 90% còn page New-event-detail và Thư viện

--- a/DongGia-master/src/components/_header/index.pug
+++ b/DongGia-master/src/components/_header/index.pug
@@ -30,13 +30,13 @@ header
 								li
 									a(href="about.html") giới thiệu
 								li
-									a(href="product.html") năng lực thi công
+									a(href="ability.html") năng lực thi công
 								li
 									a(href="project.html") dự án
 								li
-									a(href="news-envents.html") tin tức - sự kiện
+									a(href="new-event.html") tin tức - sự kiện
 								li
-									a(href="catalogue.html") hỗ trợ khách hàng
+									a(href="support.html") hỗ trợ khách hàng
 								li
 									a(href="employ.html") tuyển dụng
 								li
