--- a/DongGia-master/src/pages/gallery.pug
+++ b/DongGia-master/src/pages/gallery.pug
@@ -1,7 +1,7 @@
 extends _layout.pug
 
 block var
-	- var title = "Gallery"
+	- var title = "THƯ VIỆN"
 	- var name = "gallery"
 	- var bodyClass = "gallery-page"
 
