--- a/DongGia-master/src/pages/index.pug
+++ b/DongGia-master/src/pages/index.pug
@@ -1,7 +1,7 @@
 extends _layout.pug
 
 block var
-	- var title = "Home"
+	- var title = "TRANG CHỦ"
 	- var name = "index"
 	- var bodyClass = "index-page"
 
