--- a/DongGia-master/src/pages/project.pug
+++ b/DongGia-master/src/pages/project.pug
@@ -1,25 +1,9 @@
 extends _layout.pug
 
 block var
-	- var title = "Project"
+	- var title = "DỰ ÁN"
 	- var name = "project"
 	- var bodyClass = "project-page"
 
 block main
-	section.project
-		h2.moduleTitle DỰ ÁN
-		.container
-			.row
-				.col
-					img.img-fluid(src="../img/project/project_item_1.png", alt="")
-					img.img-fluid(src="../img/project/project_item_3.png", alt="")
-				.col
-					img.img-fluid(src="../img/project/project_item_8.png", alt="")
-				.col
-					img.img-fluid(src="../img/project/project_item_2.png", alt="")
-					img.img-fluid(src="../img/project/project_item_4.png", alt="")
-			.row
-				.col
-					img.img-fluid(src="../img/project/project_item_6.png", alt="")
-					img.img-fluid(src="../img/project/project_item_5.png", alt="")
-					img.img-fluid(src="../img/project/project_item_7.png", alt="")
+	include ../components/project/index.pug
