--- a/DongGia-master/src/components/_core/index.sass
+++ b/DongGia-master/src/components/_core/index.sass
@@ -81,58 +81,6 @@ body
 				font-size: 30px
 				font-weight: 600
 				line-height: 31px
-			.m-content
-				border-radius: 5px
-				background: rgba(255,255,255,.7)
-				margin: 1rem 0
-				padding: 0
-				.module-Content
-					p
-						padding: .5rem
-						color: #666666
-						font-family: 'Montserrat', sans-serif
-						font-size: 15px
-						font-weight: 400
-						line-height: 23px
-					h3
-						position: relative
-						padding: .5rem 0
-						color: #685c53
-						font-family: 'Montserrat', sans-serif
-						font-size: 24px
-						font-weight: 600
-						line-height: 31px
-						letter-spacing: 0.6px
-						&:before
-							content: ""
-							display: inline-block
-							height: 1px
-							width: 100%
-							background-image: linear-gradient(to top, #9d763d 0%, #d3ae63 100%)
-							position: absolute
-							bottom: 0
-							left: 0
-					h4
-						padding: 0 .5rem 1rem
-						font-family: 'Montserrat', sans-serif
-						font-size: 24px
-						font-weight: 600
-						line-height: 31px
-						letter-spacing: 0.6px
-						text-transform: uppercase
-						background-clip: text
-						-webkit-background-clip: text
-						color: transparent
-						background-image: linear-gradient(to right, #9d763d 0%, #d3ae63 100%)
-				@media (min-width: 768px)
-					flex: 0 0 50%
-					border-radius: 0
-					background: none
-					.module-Content
-						margin-left: .5rem
-						border-radius: 5px
-						background: hsla(0,0%,100%,.7)
-						height: 100%
 			.s-content
 				border-radius: 5px
 				background: rgba(255,255,255,.7)
@@ -228,6 +176,72 @@ body
 						border-radius: 5px
 						background: hsla(0,0%,100%,.7)
 						height: 100%
+						.img-fluid
+							float: left
+							padding: 1rem
+						p
+							text-align: left
+							padding: 1rem
+							display: flex
+			.m-content
+				border-radius: 5px
+				background: rgba(255,255,255,.7)
+				margin: 1rem 0
+				padding: 0
+				.module-Content
+					p
+						padding: .5rem
+						color: #666666
+						font-family: 'Montserrat', sans-serif
+						font-size: 15px
+						font-weight: 400
+						line-height: 23px
+					h3
+						position: relative
+						padding: .5rem 0
+						color: #685c53
+						font-family: 'Montserrat', sans-serif
+						font-size: 24px
+						font-weight: 600
+						line-height: 31px
+						letter-spacing: 0.6px
+						&:before
+							content: ""
+							display: inline-block
+							height: 1px
+							width: 100%
+							background-image: linear-gradient(to top, #9d763d 0%, #d3ae63 100%)
+							position: absolute
+							bottom: 0
+							left: 0
+					h4
+						padding: 0 .5rem 1rem
+						font-family: 'Montserrat', sans-serif
+						font-size: 24px
+						font-weight: 600
+						line-height: 31px
+						letter-spacing: 0.6px
+						text-transform: uppercase
+						background-clip: text
+						-webkit-background-clip: text
+						color: transparent
+						background-image: linear-gradient(to right, #9d763d 0%, #d3ae63 100%)
+				@media (min-width: 768px)
+					flex: 0 0 50%
+					border-radius: 0
+					background: none
+					.module-Content
+						margin-left: .5rem
+						border-radius: 5px
+						background: hsla(0,0%,100%,.7)
+						height: 100%
+						.img-fluid
+								float: right
+								padding: 1rem
+						p
+							text-align: left
+							padding: 1rem
+							display: flex
 		.module-history
 			text-align: center
 			h2
@@ -249,82 +263,117 @@ body
 					p
 						padding: 0
 		.module-partner
+			position: relative
 			padding: 4rem 0
-			.moduleContent
-				display: flex
-				margin: 0 5rem
-				padding: 0 1rem
-				.carousel
-					box-shadow: 0px 0px 1px rgba(19, 28, 35, 0.1)
+			.module-client
+				position: relative
+				.swiper-container
+					width: 100%
+					height: 100%
+					.swiper-wrapper
+						.swiper-slide
+							text-align: center
+							font-size: 18px
+							background: #fff
+							display: flex
+							justify-content: center
+							align-items: center
+							.box-img
+								box-shadow: 0px 0px 1px rgba(19, 28, 35, 0.1)
+								border: .5px solid rgba(19, 28, 35, 0.1)
+								text-align: center
+								width: 100%
+								z-index: 999
+								&:hover
+									box-shadow: 0 0 15px 0 rgba(0,0,0,.2)
+									z-index: 999
+				.swiper-button-next
+					background-image: none
+					width: 20px
+					height: 20px
 					text-align: center
-					&:hover
-						box-shadow: 0 4px 20px rgba(19, 28, 35, 0.1)
-
-	.product
-		padding-bottom: 5rem
-		.module-product
-			.content
-				p
+					position: absolute
+					top: auto
+					bottom: -25%
+					right: auto
+					left: 50%
+					display: flex
+					justify-content: center
+					align-items: center
+					border-radius: 5px
+					border: 1px solid #f5b535
+					display: flex
+					justify-content: center
+					align-items: center
 					padding: 1rem
-					color: #333333
-					font-family: 'Montserrat', sans-serif
-					font-size: 15px
-					font-weight: 400
-					line-height: 23px
-			.module-img
-				text-align: center
-			@media (min-width: 992px)
-				display: flex
-				.content
-					flex: 0 0 70%
-				.module-img
-					flex: 0 0 30%
-		.module-project
-			text-align: center
-			padding-top: 5rem
-			.content
-				figure
-					margin: 1rem 0
-					position: relative
-					figcaption
-						position: absolute
-						bottom: 0
-						left: 0
-						width: 100%
-						background: linear-gradient(rgba(0, 0, 0, 0), rgb(0, 0, 0))
-						padding-bottom: 1rem
-						h3
-							position: relative
-							color: #ffffff
-							font-family: 'Montserrat', sans-serif
-							font-size: 14px
+					background: #f5b535
+					.fa-chevron-right
+						outline: none
+						font-style: normal
+						background-clip: text
+						-webkit-background-clip: text
+						color: transparent
+						background-image: linear-gradient(to right, #9d763d 0%, #d3ae63 100%)
+						&:before
+							color: #000
+							content: "\f054"
+							font-family: 'Font Awesome 5 Free'
 							font-weight: 600
-							line-height: 18px
-							text-transform: uppercase
-							padding-left: .5rem
-							text-align: left
-							&:before
-								display: inline-block
-								width:95%
-								height: 2px
-								background-color: #e1e1e1
-								content: ""
-								position: absolute
-								bottom: 0
-								left: 50%
-								transform: translateX(-50%)
-								opacity: .7
-							&:after
-								content: "\f0da"
-								font-family: "Font Awesome 5 Free"
-								font-weight: 600
-								color: #ffffff
-								position: absolute
-								top: 0
-								right: .5rem
-
-
-ul
+				.swiper-button-prev
+					background-image: none
+					width: 20px
+					height: 20px
+					text-align: center
+					position: absolute
+					bottom: -25%
+					top: auto
+					right: 51%
+					left: auto
+					display: flex
+					justify-content: center
+					align-items: center
+					border-radius: 5px
+					border: 1px solid #f5b535
+					display: flex
+					justify-content: center
+					align-items: center
+					padding: 1rem
+					background: #f5b535
+					.fa-chevron-left
+						outline: none
+						font-style: normal
+						background-clip: text
+						-webkit-background-clip: text
+						color: transparent
+						background-image: linear-gradient(to right, #9d763d 0%, #d3ae63 100%)
+						&:before
+							color: #000
+							content: "\f053"
+							font-family: 'Font Awesome 5 Free'
+							font-weight: 600
+			@media (min-width: 992px)
+				.module-client
+					.swiper-button-next
+						outline: none
+						transform: translate(-50%,-50%)
+						right: -1%
+						bottom: auto
+						top: 20%
+						left: auto
+						background-image: none
+						background: #ffffff
+						border-color: rgba(19, 28, 35, 0.1)
+					.swiper-button-prev
+						outline: none
+						transform: translate(-50%,-50%)
+						left: auto
+						background-image: none
+						bottom: auto
+						top: 20%
+						right: 4%
+						background: #ffffff
+						border-color: rgba(19, 28, 35, 0.1)
+.module-a
 	list-style-type: none
 	padding-left: 0
 main
@@ -379,6 +428,9 @@ img
 		flex: 0 0 50%
 		max-width: 50%
 @media (min-width: 768px)
+	.col-md-6
+		flex: 0 0 50%
+		max-width: 50%
 @media (min-width: 992px)
 	.col-lg
 		flex-grow: 1
