--- a/DongGia-master/src/components/_header/index.sass
+++ b/DongGia-master/src/components/_header/index.sass
@@ -1,27 +1,29 @@
 header
 	padding-top: 10px
-	padding-bottom: 20px
+	padding-bottom: 10px
 	width: 100%
 	top: 0
 	left: 0
 	transition: all .3s ease-out
 	background-color: #404040
-	z-index: 2
+	z-index: 99999
 	&.fixed
 		position: fixed
-		box-shadow: 0 0 8px rgba(0,0,0,.15)
 	.backdrop
 		display: none
 	.logo
 		flex-grow: 1
 		flex-basis: 0
 		max-width: 190px
-		margin-right: 70px
 		display: flex
 		justify-content: center
 		align-items: center
+		z-index: 99999
 		img
-			width: 100%
+			width: 50%
+		@media (min-width: 992px)
+			img
+				width: 100%
 	.menu-wrapper
 		flex-grow: 1
 		flex-basis: 0
@@ -201,6 +203,7 @@ header
 				font-weight: 500
 				text-transform: uppercase
 				justify-content: space-between
+				list-style-type: none
 				li
 					flex-grow: auto
 					a
@@ -221,11 +224,12 @@ header
 	@media (max-width: 1199.9px)
 		.logo
 			max-width: 150px
-			margin-right: 30px
+			margin-right: 0
 		.category-list
 			.ModuleContent
 				ul
 					font-size: 13px
+					padding-top: 2px
 	@media (max-width: 991.9px)
 		padding-bottom: 10px
 		.container
@@ -234,7 +238,7 @@ header
 			display: none
 			z-index: 1
 			position: fixed
-			top: 90px
+			top: 60px
 			left: 0
 			width: 100%
 			height: 100%
@@ -263,7 +267,7 @@ header
 			margin-bottom: 0
 			justify-content: flex-start
 			position: fixed
-			top: 90px
+			top: 60px
 			height: 550px
 			right: 0
 			z-index: 3
@@ -330,7 +334,7 @@ header
 							background-color: #f5b535
 		.category-list
 			position: fixed
-			top: 77px
+			top: 48px
 			z-index: 2
 			right: 0
 			width: 100%
