--- a/DongGia-master/src/components/main.sass
+++ b/DongGia-master/src/components/main.sass
@@ -6,3 +6,9 @@
 @import "product/index.sass"
 @import "gallery/index.sass"
 @import "_header_banner/index.sass"
+@import "employ/index.sass"
+@import "new-event/index.sass"
+@import "ability/index.sass"
+@import "support/index.sass"
+@import "contact/index.sass"
+@import "project/index.sass"
