--- a/DongGia-master/src/pages/about.pug
+++ b/DongGia-master/src/pages/about.pug
@@ -50,11 +50,29 @@ block main
 						p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit
 						p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. 
 		.module-partner
-			h2.moduleTitle Đối tác - Khách hàng
-			.moduleContent.owl-carousel.owl-theme
-				- for (x=1;x<6;x++)
-					.carousel
-						.container
-							.row
-								.col
-									img.box-img.img-fluid(src="../img/about/partner/about_client_"+x+".png", alt="", srcset="")
+			.container
+				.row
+					.col
+						.module-client
+							.container
+								.row
+									.col.content
+										h2.moduleTitle Đối tác - Khách hàng
+								.row
+									.col
+										.swiper-container.partner-client
+											.swiper-wrapper
+												.swiper-slide(data-target="sl-1")
+													img.box-img.img-fluid(src="../img/about/partner/about_client_1.png", alt="", srcset="")
+												.swiper-slide(data-target="sl-2")
+													img.box-img.img-fluid(src="../img/about/partner/about_client_2.png", alt="", srcset="")
+												.swiper-slide(data-target="sl-3")
+													img.box-img.img-fluid(src="../img/about/partner/about_client_3.png", alt="", srcset="")
+												.swiper-slide(data-target="sl-4")
+													img.box-img.img-fluid(src="../img/about/partner/about_client_4.png", alt="", srcset="")
+												.swiper-slide(data-target="sl-5")
+													img.box-img.img-fluid(src="../img/about/partner/about_client_5.png", alt="", srcset="")
+							.swiper-button-next
+								i.fa-chevron-right
+							.swiper-button-prev
+								i.fa-chevron-left
