--- a/DongGia-master/src/components/employ/index.sass
+++ b/DongGia-master/src/components/employ/index.sass
@@ -62,6 +62,8 @@
 				border-radius: 5px
 				background-color: #ffffff
 				padding-bottom: 2rem
+				transform: translateY(-7px)
+				transition: .3s all ease-in-out
 				figcaption
 					h3
 						color: #333333
@@ -102,6 +104,8 @@
 							display: none
 			&:hover
 				figure
+					transform: translateY(-7px)
+					transition: .3s all ease-in-out
 					box-shadow: 3px 4px 16px rgba(0, 0, 0, 0.18)
 			@media (min-width: 768px)
 				flex: 0 0 50%
@@ -135,6 +139,7 @@
 						.even
 							background-color: #f5f5f5
 						tr
+							transition: .3s all ease-in-out
 							td
 								height: 50px
 								color: #333333
@@ -147,6 +152,8 @@
 								text-align: left
 							&:hover
 								box-shadow: 3px 4px 10px rgba(0, 0, 0, 0.2)
+								transform: translateY(-7px)
+								transition: .3s all ease-in-out
 								td
 									color: #b68c4e
 									font-family: Montserrat,sans-serif
