--- a/DongGia-master/src/components/gallery/index.sass
+++ b/DongGia-master/src/components/gallery/index.sass
@@ -1,54 +1,98 @@
-.gallery-nav
-	nav
-		display: flex
-		justify-content: center
-		border-bottom: 1px solid darken(white, 12%)
-		a
-			font-size: 14px
-			font-weight: 400
-			text-transform: uppercase
-			line-height: 60px
-			margin: 0 28px
-			color: darken(white,40%)
-			border-bottom: 3px solid transparent
-			&:hover,&.active
-				color: map-get($mau, hover)
-				text-decoration: none
-			&.active
-				border-bottom: 3px solid map-get($mau, hover)
-			
 .gallery
-	padding: 80px 0
-	.grid
-		display: flex
-		flex-wrap: wrap
-		margin: 0 -10px
-	.grid-item
-		flex: 0 0 33.3333%
-		max-width: 33.3333%
-		padding: 10px
-	.viewmore
-		text-align: center
-		margin-top: 50px
-		a
-			display: inline-flex
-			min-width: 190px
-			height: 50px
-			justify-content: center
-			align-items: center
-			border: 1px solid lighten(black,33%)
-			color: lighten(black,33%)
-			text-transform: uppercase
-			font-size: 16px
-			border-radius: 5px
-			&:hover
-				background: map-get($mau, main)
-				border-color: map-get($mau, main)
-				color: white
-				text-decoration: none
-@media (max-width: 767.9px)
-	.gallery
-		padding: 40px 0
-		.grid-item
-			flex: 0 0 50%
-			max-width: 50%
+	padding-bottom: 4rem
+	.Module
+		.moduleContent
+			.gallery-nav
+				ul
+					padding: 0
+					display: flex
+					justify-content: center
+					align-items: center
+					text-align: center
+					flex-direction: row
+					list-style-type: none
+					padding-bottom: 2rem
+					width: 100%
+					li
+						padding: 0 !important
+						border-radius: 5px 0 0 5px
+						border: 1px solid #eeeeee
+						max-width: 100%
+						width: 160px
+						height: 40px
+						display: flex
+						justify-content: center
+						align-items: center
+						a
+							color: #4a4a4a
+							font-family: 'Montserrat', sans-serif
+							font-size: 15px
+							font-weight: 400
+							text-decoration: none
+						&:hover
+							box-shadow: 0 4px 20px rgba(19, 28, 35, 0.1)
+							border-radius: 0 5px 5px 0
+							background-color: #e1e1e1
+					@media (min-width: 768px)
+						li
+							width: 270px
+			.gallery-content
+				display: flex
+				flex-wrap: wrap
+				.container
+					max-width: 980px
+					.gallery-list
+						display: flex
+						flex-wrap: wrap
+						list-style-type: none
+						padding: 0
+						.gallery-item
+							padding: .5rem
+							position: relative
+							width: 100%
+							.img-fluid
+								width: 100%
+								filter: brightness(0.5)
+							.gallery-poster
+								position: absolute
+								top: 50%
+								left: 50%
+								transform: translate(-50%, -50%)
+							&:hover
+								.img-fluid
+									filter: none
+								.gallery-poster
+									display: none
+						@media (min-width: 768px)
+							.flex-100
+								flex: 0 0 100%
+								max-width: 100%
+							.flex-50
+								flex: 0 0 50%
+								max-width: 50%
+						@media (min-width: 992px)
+							flex: 0 0 50%
+.gallery-page
+	.lg-outer
+		.lg-actions
+			.lg-prev
+				&:after
+					content: "\f060"
+					font-family: "Font Awesome 5 Free"
+					font-weight: 600
+			.lg-next
+				&:before
+					content: "\f061"
+					font-family: "Font Awesome 5 Free"
+					font-weight: 600
+		.lg-toolbar
+			.lg-download
+				&:after
+					content: "\f063"
+					font-family: "Font Awesome 5 Free"
+					font-weight: 600
+			.lg-close
+				&:after
+					content: "\f00d"
+					font-family: "Font Awesome 5 Free"
+					font-weight: 600
