--- a/DongGia-master/src/components/new-event/index.sass
+++ b/DongGia-master/src/components/new-event/index.sass
@@ -13,7 +13,7 @@
 			padding-bottom: 2rem
 			width: 100%
 			li
-				padding: 1rem 2rem
+				padding: 0 !important
 				color: #4a4a4a
 				font-family: 'Montserrat', sans-serif
 				font-size: 15px
@@ -22,6 +22,10 @@
 				border: 1px solid #eeeeee
 				max-width: 100%
 				width: 160px
+				height: 40px
+				display: flex
+				justify-content: center
+				align-items: center
 				&:hover
 					box-shadow: 0 4px 20px rgba(19, 28, 35, 0.1)
 					border-radius: 0 5px 5px 0
