tinh chỉnh padding thẻ li

--- a/DongGia-master/src/components/_header/index.sass
+++ b/DongGia-master/src/components/_header/index.sass
@@ -19,6 +19,7 @@ header
 		justify-content: center
 		align-items: center
 		z-index: 99
+				max-width: 980px
 		img
 			width: 50%
 		@media (min-width: 992px)
