--- a/DongGia-master/src/components/ability/index.sass
+++ b/DongGia-master/src/components/ability/index.sass
@@ -44,10 +44,10 @@
 				.fa-chevron-right
 					outline: none
 					font-style: normal
-					color: #ffffff
 					&:before
-						content: "\f061"
-						font-family: "Font Awesome 5 Free"
+						color: #fff
+						content: "\f054"
+						font-family: 'Font Awesome 5 Free'
 						font-weight: 600
 			.swiper-button-prev
 				transform: translateX(10%)
@@ -68,12 +68,12 @@
 				padding: 1rem
 				background: #f5b535
 				.fa-chevron-left
-					color: #ffffff
 					outline: none
 					font-style: normal
 					&:before
-						content: "\f060"
-						font-family: "Font Awesome 5 Free"
+						color: #fff
+						content: "\f053"
+						font-family: 'Font Awesome 5 Free'
 						font-weight: 600
 	@media (min-width: 992px)
 		.container
@@ -231,12 +231,8 @@
 				.fa-chevron-right
 					outline: none
 					font-style: normal
-					background-clip: text
-					-webkit-background-clip: text
-					color: transparent
-					background-image: linear-gradient(to right, #9d763d 0%, #d3ae63 100%)
 					&:before
-						color: #000
+						color: #fff
 						content: "\f054"
 						font-family: 'Font Awesome 5 Free'
 						font-weight: 600
@@ -260,12 +256,8 @@
 				.fa-chevron-left
 					outline: none
 					font-style: normal
-					background-clip: text
-					-webkit-background-clip: text
-					color: transparent
-					background-image: linear-gradient(to right, #9d763d 0%, #d3ae63 100%)
 					&:before
-						color: #000
+						color: #fff
 						content: "\f053"
 						font-family: 'Font Awesome 5 Free'
 						font-weight: 600
