--- a/DongGia-master/src/components/_core/index.sass
+++ b/DongGia-master/src/components/_core/index.sass
@@ -9,6 +9,8 @@ html
 	color: #212529
 	text-align: left
 	background-color: #fff
+figure
+	margin: none
 body
 	margin: 0
 	section
@@ -443,7 +445,7 @@ body
 						color: transparent
 						background-image: linear-gradient(to right, #9d763d 0%, #d3ae63 100%)
 						&:before
-							color: #000
+							color: #fff
 							content: "\f054"
 							font-family: 'Font Awesome 5 Free'
 							font-weight: 600
@@ -473,7 +475,7 @@ body
 						color: transparent
 						background-image: linear-gradient(to right, #9d763d 0%, #d3ae63 100%)
 						&:before
-							color: #000
+							color: #fff
 							content: "\f053"
 							font-family: 'Font Awesome 5 Free'
 							font-weight: 600
@@ -489,6 +491,8 @@ body
 						background-image: none
 						background: #ffffff
 						border-color: rgba(19, 28, 35, 0.1)
+						&:before
+							color: #000
 					.swiper-button-prev
 						transform: translate(-27%,50%)
 						outline: none
@@ -499,6 +503,8 @@ body
 						right: 6%
 						background: #ffffff
 						border-color: rgba(19, 28, 35, 0.1)
+						&:before
+							color: #000
 			@media (min-width: 900px)
 				.btn-group
 					.swiper-button-prev
