--- a/DongGia-master/src/components/project/index.pug
+++ b/DongGia-master/src/components/project/index.pug
@@ -8,59 +8,67 @@ section.project
 						img(src="../img/project/project_item_1.png", alt="")
 					figcaption
 						h3 Ocean Hill Village
-						p NHA TRANG
-							i.fas.fa-arrow-right
+						p
+							span NHA TRANG
+							span.fas.fa-arrow-right
 				figure
 					a(href="")
 						img(src="../img/project/project_item_3.png", alt="")
 					figcaption
 						h3 The Silk Path City
-						p phú quốc
-							i.fas.fa-arrow-right
+						p
+							span phú quốc
+							span.fas.fa-arrow-right
 			.content.fix-height
 				figure
 					a(href="")
 						img(src="../img/project/project_item_8.png", alt="")
 					figcaption
 						h3 Căn hộ Napoleon Castle
-						p NHA TRANG bay
-							i.fas.fa-arrow-right
+						p
+							span NHA TRANG bay
+							span.fas.fa-arrow-right
 			.content.order-1
 				figure
 					a(href="")
 						img(src="../img/project/project_item_2.png", alt="")
 					figcaption
 						h3 Intercontinental
-						p phú quốc
-							i.fas.fa-arrow-right
+						p
+							span phú quốc
+							span.fas.fa-arrow-right
 				figure
 					a(href="")
 						img(src="../img/project/project_item_4.png", alt="")
 					figcaption
 						h3 Căn hộ Sunshine Marina
-						p NHA TRANG bay
-							i.fas.fa-arrow-right
+						p
+							span NHA TRANG bay
+							span.fas.fa-arrow-right
 			.content
 				figure
 					a(href="")
 						img(src="../img/project/project_item_6.png", alt="")
 					figcaption
 						h3 Fusion Resort
-						p phú quốc
-							i.fas.fa-arrow-right
+						p
+							span phú quốc
+							span.fas.fa-arrow-right
 			.content
 				figure
 					a(href="")
 						img(src="../img/project/project_item_5.png", alt="")
 					figcaption
 						h3 Melia Bali Villas Resort
-						p phú quốc
-							i.fas.fa-arrow-right
+						p
+							span phú quốc
+							span.fas.fa-arrow-right
 			.content.order-1
 				figure
 					a(href="")
 						img(src="../img/project/project_item_7.png", alt="")
 					figcaption
 						h3 Lan Rung Resort
-						p phú quốc
-							i.fas.fa-arrow-right
+						p
+							span phú quốc
+							span.fas.fa-arrow-right
