--- a/DongGia-master/src/components/project/index.sass
+++ b/DongGia-master/src/components/project/index.sass
@@ -31,21 +31,30 @@
 							text-align: center
 						p
 							text-align: center
-							font-family: "Roboto - Regular", sans-serif
-							font-size: 13px
-							font-weight: 400
-							color: #ffffff
-							text-align: center
+							display: flex
+							justify-content: center
+							align-items: center
+							span
+								text-transform: uppercase
+								text-align: center
+								font-family: "Roboto - Regular", sans-serif
+								font-size: 13px
+								font-weight: 400
+								color: #ffffff
 							.fa-arrow-right
-								display: inline-block
+								display: inline-flex
+								align-items: center
+								justify-content: center
 								width: 20px
 								height: 20px
 								font-style: normal
 								&:after
-									content: "\f061"
-									font-family: "Font Awesome 5 Free"
-									font-weight: 600
+									content: "\f054"
+									font-family: "Material Design Icons"
+									font-weight: 400
 									color: #ffffff
+									font-size: 18px
+									padding-left: 5px
 					img
 						padding-top: 20px
 			@media (min-width: 512px)
@@ -157,6 +166,7 @@
 		justify-content: center
 		figure
 			position: relative
+			margin: 0 20px
 			img
 				filter: brightness(.5)
 				transition: .5s all ease-in-out
@@ -166,6 +176,7 @@
 				left: 50%
 				transform: translate(-50%, -50%)
 				img
+					width: 60%
 					transition: .5s all ease-in-out
 					border: none
 					filter: none
@@ -189,6 +200,12 @@
 					img
 						display: none
 						transition: .5s all ease-in-out
+	@media (min-width: 768px)
+		.row
+			figure
+				figcaption
+					img
+						width: 100%
 
 .project-photos
 	text-align: center
